examples/test/testpolicy15900.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15900
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key46: value16
      key16: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value22
      podSelector:
        matchLabels:
          key40: value3
          key20: value11
